[gd_scene load_steps=4 format=3 uid="uid://do43ctveiyn4a"]

[ext_resource type="Script" uid="uid://dif1i6341j6yw" path="res://cenas/interações/livro_tutorial.gd" id="1_eqwld"]
[ext_resource type="Texture2D" uid="uid://b2bqbai2oteo5" path="res://assets/Mapa/opalalivro/oplalalivro.png" id="2_n5goa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o4k7l"]
radius = 14.3178

[node name="livro_tutorial" type="Area2D"]
script = ExtResource("1_eqwld")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1.43051e-06, -6)
scale = Vector2(0.425926, 0.4)
texture = ExtResource("2_n5goa")
region_enabled = true
region_rect = Rect2(5.33974, 0, 27.7209, 30.9177)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_o4k7l")

[node name="LabelInteracao" type="Label" parent="."]
offset_left = 1.0
offset_top = -34.0
offset_right = 41.0
offset_bottom = -11.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
